--- a/QuanLiDiemSinhVien/QuanLiDiemSinhVien.csproj
+++ b/QuanLiDiemSinhVien/QuanLiDiemSinhVien.csproj
@@ -46,6 +46,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CoSoDuLieu.cs" />
     <Compile Include="FormDangNhap.cs">
       <SubType>Form</SubType>
     </Compile>
