hoàn thành nút sinh viên

--- a/QuanLiDiemSinhVien/QuanLiDiemSinhVien.csproj
+++ b/QuanLiDiemSinhVien/QuanLiDiemSinhVien.csproj
@@ -59,6 +59,12 @@
     <Compile Include="FormĐăngKí.Designer.cs">
       <DependentUpon>FormĐăngKí.cs</DependentUpon>
     </Compile>
+    <Compile Include="frmDoiMatKhau.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmDoiMatKhau.Designer.cs">
+      <DependentUpon>frmDoiMatKhau.cs</DependentUpon>
+    </Compile>
     <Compile Include="frmQuanLyDiem.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -90,6 +96,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="FormĐăngKí.resx">
       <DependentUpon>FormĐăngKí.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frmDoiMatKhau.resx">
+      <DependentUpon>frmDoiMatKhau.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="frmQuanLyDiem.resx">
       <DependentUpon>frmQuanLyDiem.cs</DependentUpon>
