--- a/QuanLiDiemSinhVien/QuanLiDiemSinhVien.csproj
+++ b/QuanLiDiemSinhVien/QuanLiDiemSinhVien.csproj
@@ -53,6 +53,18 @@
     <Compile Include="FormDangNhap.Designer.cs">
       <DependentUpon>FormDangNhap.cs</DependentUpon>
     </Compile>
+    <Compile Include="FormMonHoc.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FormMonHoc.Designer.cs">
+      <DependentUpon>FormMonHoc.cs</DependentUpon>
+    </Compile>
+    <Compile Include="FormMonHocSV.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FormMonHocSV.Designer.cs">
+      <DependentUpon>FormMonHocSV.cs</DependentUpon>
+    </Compile>
     <Compile Include="FormĐăngKí.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -93,6 +105,12 @@
     </Compile>
     <EmbeddedResource Include="FormDangNhap.resx">
       <DependentUpon>FormDangNhap.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FormMonHoc.resx">
+      <DependentUpon>FormMonHoc.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FormMonHocSV.resx">
+      <DependentUpon>FormMonHocSV.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="FormĐăngKí.resx">
       <DependentUpon>FormĐăngKí.cs</DependentUpon>
