--- a/QuanLiDiemSinhVien/QuanLiDiemSinhVien.csproj
+++ b/QuanLiDiemSinhVien/QuanLiDiemSinhVien.csproj
@@ -71,6 +71,12 @@
     <Compile Include="FormĐăngKí.Designer.cs">
       <DependentUpon>FormĐăngKí.cs</DependentUpon>
     </Compile>
+    <Compile Include="frmDangKyMon.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmDangKyMon.Designer.cs">
+      <DependentUpon>frmDangKyMon.cs</DependentUpon>
+    </Compile>
     <Compile Include="frmDoiMatKhau.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -114,6 +120,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="FormĐăngKí.resx">
       <DependentUpon>FormĐăngKí.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frmDangKyMon.resx">
+      <DependentUpon>frmDangKyMon.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="frmDoiMatKhau.resx">
       <DependentUpon>frmDoiMatKhau.cs</DependentUpon>
